# diff_pd

./: .gitmodules  README.md
asset/: .gitignore
asset/mesh/: Beam.ele  Beam.node  arma_6.ele  arma_6.node  armadillo_4k.ele  armadillo_4k.node  cube.ele  cube.node  single_tet.ele  single_tet.node  single_tet2.node  spring_5.ele  spring_5.node  spring_5_new.node
cpp/: CMakeLists.txt
cpp/core/include/common/: common.h
cpp/core/include/fem/: billiard_ball_state_force.h  deformable.h  gravitational_state_force.h  hydrodynamics_state_force.h  planar_collision_state_force.h
cpp/core/include/material/: neohookean.h
cpp/core/include/mesh/: mesh.h
cpp/core/include/solver/: SparseGenRealShiftSolvePardiso.h  SparseSymShiftSolvePardiso.h  deformable_preconditioner.h  pardiso_spd_solver.h
cpp/core/include/state_force/: gravitational_state_force.h  planar_collision_state_force.h  planar_contact_state_force.h
cpp/core/src/: py_diff_pd_core.i
cpp/core/src/common/: common.cpp
cpp/core/src/fem/: billiard_ball_state_force.cpp  deformable.cpp  deformable_actuation.cpp  deformable_bdf2_full_forward.cpp  deformable_bdf2ere_full_forward.cpp  deformable_bdf_full_forward.cpp  deformable_bdfere_full_forward copy.cpp  deformable_eretrbdf2_fixedJ_full_forward.cpp  deformable_eretrbdf2_full_forward.cpp  deformable_friction.cpp  deformable_newton_backward.cpp  deformable_newton_forward.cpp  deformable_pd_energy.cpp  deformable_projective_dynamics_backward.cpp  deformable_projective_dynamics_forward.cpp  deformable_quasi_static.cpp  deformable_sbdf2_full_forward.cpp  deformable_sbdf2ere_full_forward.cpp  deformable_sbdf_full_forward.cpp  deformable_semi_implicit.cpp  deformable_seretrbdf2_fixedJ_full_forward.cpp  deformable_seretrbdf2_full_forward.cpp  deformable_sibe_forward.cpp  deformable_sibe_full_forward.cpp  deformable_siere_forward.cpp  deformable_state_force.cpp  deformable_strbdf2_full_forward.cpp  deformable_strbdf2ere_full_forward.cpp  deformable_strerebdf2ere_full_forward.cpp  deformable_strsbdf2_full_forward.cpp  deformable_strsbdf2ere_full_forward.cpp  deformable_thetastrbdf2_full_forward.cpp  deformable_thetastrbdf2ere_full_forward.cpp  deformable_thetastrerebdf2ere_full_forward.cpp  deformable_thetastrsbdf2_full_forward.cpp  deformable_thetastrsbdf2ere_full_forward.cpp  deformable_thetatrbdf2_full_forward.cpp  deformable_thetatrbdf2ere_full_forward.cpp  deformable_thetatrerebdf2ere_full_forward.cpp  deformable_trbdf2_full_forward.cpp  (+7 more)
cpp/core/src/material/: neohookean.cpp
cpp/core/src/mesh/: mesh.cpp
cpp/core/src/solver/: pardiso_spd_solver.cpp
cpp/core/src/state_force/: deformable_state_force.cpp  gravitational_state_force.cpp  planar_collision_state_force.cpp
cpp/tests/: bdf-full-example.cxx  example.cxx  main.cxx  sibe-full-example.cxx  siere-example.cxx
python/example/: armadillo_3d.py  bar_clamped_simulation_script.py  bar_horizontal_simulation_script.py  bar_side_gravity_3d.py  bar_top_gravity_3d.py  benchmark_3d.py  billiard_ball_3d.py  billiard_ball_calibration.py  bouncing_armadillo_3d.py  bouncing_spring_3d.py  bouncing_tet_3d.py  deformable_backward_2d.py  deformable_backward_3d.py  deformable_quasi_static_3d.py  display_soft_starfish_3d.py  example_script.py  generate_torus.py  pbrt_renderer_demo.py  pd_forward.py  read_matrix.py  read_residual.py  render_benchmark_3d.py  render_billiard_ball_3d.py  render_bouncing_ball_3d.py  render_bunny_3d.py  render_cantilever_3d.py  render_cow_3d.py  render_hex_mesh.py  render_hopper_3d.py  render_plant_3d.py  render_quad_mesh.py  render_quadruped_3d.py  render_rolling_jelly_3d.py  render_shark_3d.py  (+37 more)
(+294 files in other folders)
